--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,12 @@ body {
   border: transparent;
   background-color: #a552c5;
   color: white;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  font-weight: 600;
   cursor: pointer;
+  transform: translate(0%, -100%);
+}
+
+.btn:hover {
+  box-shadow: 0 0 50px #a564dd;
 }
